maze.lessons.maze.island.IslandMaze.scala.error
Escaper:25: error: expected class or object definition
def GaucheMur(){
^Escaper:40: error: Unmatched closing brace '}' ignored here
}
^