maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
  while(!estSurBiscuit()){
    droite()
    while(getX()!=11){
    	while(!estFaceMur){
      	avance()
    	}
    	if(estFaceMur){
      	droite()
        avance()
        gauche()
    	}
      while(!estFaceMur){
      	avance()
      }
      gauche()
      }
    }
  	GaucheMur()
  }
  prendBiscuit()
}

def GaucheMur(){
  gauche()
  if(estFaceMur){
    droite()
  	while(estFaceMur()){
    	droite()
  	}
    avance()
  }
  else{
      avance()
  }
}